--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>blogPost</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el Titulo atractivo e interesante del Post</h1>
+            <p>y este es el parrafo de inicio donde vamos a explicar las cosas
+                increibles que se pueden hacer con ramas
+            </p>
+
+        </div>
+
+    </div>
 </body>
 </html>
