nueva informacion adicionada

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas
                 increibles que se pueden hacer con ramas
             </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laborum voluptatum praesentium eius a nam omnis velit esse 
+            </p>
 
         </div>
 
