cambio de color y parrafo nuevo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">tu blog de confianza</span>
+            <span id="tagline">tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este es el Titulo atractivo e interesante del Post</h1>
@@ -20,6 +20,9 @@
             </p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laborum voluptatum praesentium eius a nam omnis velit esse 
+            </p>
+            <p>
+                dale like y comparte 
             </p>
 
         </div>
