importe dde logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div id="container">
+        
         <div id="cabecera">
+            <div id="img-container">
+                <img src="./imagenes/mega.jpg" alt="">
+            </div>
             Hyperblog
             <span id="tagline">tu blog de cabecera</span>
         </div>
