--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <div id="cabecera">
             <div id="img-container">
-                <img src="./imagenes/mega.jpg" alt="">
+                <img  id="imagen" src="./imagenes/mega.jpg" alt="">
             </div>
             Hyperblog
             <span id="tagline">tu blog de cabecera</span>
