se añade tilde a parrafo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="post">
             <h1>Este es el Titulo atractivo e interesante del Post</h1>
-            <p>y este es el parrafo de inicio donde vamos a explicar las cosas
+            <p>y este es el parráfo de inicio donde vamos a explicar las cosas
                 increibles que se pueden hacer con ramas
             </p>
             <p>
