--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <div id="post">
             <h1>Este es el Titulo atractivo e interesante del Post</h1>
             <p>y este es el parráfo de inicio donde vamos a explicar las cosas
-                increibles que se pueden hacer con ramas
+                increibles que se pueden hacer con rama
             </p>
+            <img id="img2" src="./imagenes/mega2.jpg" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laborum voluptatum praesentium eius a nam omnis velit esse 
             </p>
